Use base URL without domain part for absolute paths.

--- a/templates/404.html
+++ b/templates/404.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="flex justify-center">
-        <a href="{{ config.base_url | safe }}" class="btn btn-primary">Back to Homepage</a>
+        <a href="{{ content::base_path() }}" class="btn btn-primary">Back to Homepage</a>
     </div>
 </div>
 {% endblock %}
