--- a/templates/shortcodes/badge_success.html
+++ b/templates/shortcodes/badge_success.html
@@ -1,5 +1,5 @@
 {%- import "macros/content.html" as content -%}
 <div class="badge badge-success">
     {% if icon %}{{ content::icon(id="success") }}{% endif %}
-    <span>{{ body }}</span>
+    <span>{{ body | safe }}</span>
 </div>
