Span instead of the div element for the badges.

--- a/templates/shortcodes/badge_primary.html
+++ b/templates/shortcodes/badge_primary.html
@@ -1,3 +1,3 @@
-<div class="badge badge-soft badge-primary">
+<span class="badge badge-soft badge-primary">
     <span>{{ body | safe }}</span>
-</div>
+</span>
