--- a/templates/shortcodes/badge_error.html
+++ b/templates/shortcodes/badge_error.html
@@ -1,5 +1,5 @@
 {%- import "macros/content.html" as content -%}
-<div class="badge badge-error">
+<span class="badge badge-error">
     {% if icon %}{{ content::icon(id="error") }}{% endif %}
     <span>{{ body | safe }}</span>
-</div>
+</span>
