Use properly stylized names of social platforms

--- a/templates/macros/content.html
+++ b/templates/macros/content.html
@@ -48,10 +48,10 @@
 <a href="{{ config.extra.social.codeberg }}" title="Codeberg" target="_blank">{{ content::icon(id="codeberg", class="h-8 w-8", icons=icons) }}</a>
 {% endif %}
 {% if config.extra.social.github %}
-<a href="{{ config.extra.social.github }}" title="Github" target="_blank">{{ content::icon(id="github", class="h-8 w-8", icons=icons) }}</a>
+<a href="{{ config.extra.social.github }}" title="GitHub" target="_blank">{{ content::icon(id="github", class="h-8 w-8", icons=icons) }}</a>
 {% endif %}
 {% if config.extra.social.gitlab %}
-<a href="{{ config.extra.social.gitlab }}" title="Gitlab" target="_blank">{{ content::icon(id="gitlab", class="h-8 w-8", icons=icons) }}</a>
+<a href="{{ config.extra.social.gitlab }}" title="GitLab" target="_blank">{{ content::icon(id="gitlab", class="h-8 w-8", icons=icons) }}</a>
 {% endif %}
 {% if config.extra.social.stackoverflow %}
 <a href="{{ config.extra.social.stackoverflow }}" title="Stack Overflow" target="_blank">{{ content::icon(id="stackoverflow", class="h-8 w-8", icons=icons) }}</a>
@@ -66,7 +66,7 @@
 <a href="{{ config.extra.social.instagram }}" title="Instagram" target="_blank">{{ content::icon(id="instagram", class="h-8 w-8", icons=icons) }}</a>
 {% endif %}
 {% if config.extra.social.youtube %}
-<a href="{{ config.extra.social.youtube }}" title="Youtube" target="_blank">{{ content::icon(id="youtube", class="h-8 w-8", icons=icons) }}</a>
+<a href="{{ config.extra.social.youtube }}" title="YouTube" target="_blank">{{ content::icon(id="youtube", class="h-8 w-8", icons=icons) }}</a>
 {% endif %}
 {% if config.extra.social.signal %}
 <a href="{{ config.extra.social.signal }}" title="Signal" target="_blank">{{ content::icon(id="signal", class="h-8 w-8", icons=icons) }}</a>
