Show singular word for one minute read times.
Co-authored-by: Michael Bushey <michael@realtymogul.com>

--- a/templates/page.html
+++ b/templates/page.html
@@ -45,7 +45,9 @@
     </span>
     <span class="flex items-center whitespace-nowrap">
         {{ content::icon(id="clock", icons=icons) }}
-        <span class="ml-1">{{ page.reading_time }} {{ i18n.minutes }}</span>
+        <span class="ml-1">{{ page.reading_time }}
+            {% if page.reading_time == 1 %}{{ i18n['minute'] }}{% else %}{{ i18n['minutes'] }}{% endif %}
+        </span>
     </span>
     {% endif %}
 
