--- a/templates/taxonomy_single.html
+++ b/templates/taxonomy_single.html
@@ -6,8 +6,8 @@
 {% if paginator %}{% set pages = paginator.pages %}{% else %}{% set pages = term.pages %}{% endif %}
 
 <div class="flex flex-col items-center mt-10">
-    <h1 class="">{{ content::translate(value=term.name, i18n=i18n) | title }}</h1>
-    <p>{{ content::cards(pages=pages, i18n=i18n, icons=icons) }}</p>
+    <h1 class="">{{ content::translate(value=term.name, i18n=i18n, i18n_user=i18n_user) | title }}</h1>
+    <p>{{ content::cards(pages=pages, i18n=i18n, i18n_user=i18n_user, icons=icons) }}</p>
 </div>
 
 {% endblock %}
