Removed underlines that were introduced by the TailwindCSS update.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -166,6 +166,10 @@
         @apply mb-4;
     }
 
+    .btn {
+        @apply no-underline;
+    }
+
     .breadcrumbs {
         a {
             @apply no-underline;
