Allow to overwrite the content, when inheriting the page template.

--- a/templates/page.html
+++ b/templates/page.html
@@ -64,7 +64,9 @@
     {% endif %}
 </div>
 
+{% block page_content %}
 {{ page.content | safe }}
+{% endblock %}
 
 {% block page_footer %}
 {% endblock %}
