--- a/templates/macros/content.html
+++ b/templates/macros/content.html
@@ -152,3 +152,28 @@
     {{ i18n[identifier] | default(value=value) }}
 {%- endif -%}
 {% endmacro %}
+
+{# Shows steps progess, for which it is needed to set the ordering to "weighted" for the section #}
+{% macro steps_progress(page) %}
+<ul class="steps">
+    {{ content::steps_lower(page=page) }}
+    <li class="step step-secondary pl-4"><a href="{{page.permalink }}">{{ page.title }}</a></li>
+    {{ content::steps_higher(page=page) }}
+</ul>
+{% endmacro %}
+
+{# Helper macro for recursively adding the steps elemets for all previous / lower pages #}
+{% macro steps_lower(page) %}
+{% if page.lower %}
+{{ self::steps_lower(page=get_page(path=page.lower.relative_path)) }}
+<li class="step step-secondary pl-4"><a href="{{ page.lower.permalink }}">{{ page.lower.title }}</a></li>
+{% endif %}
+{% endmacro %}
+
+{# Helper macro for recursively adding the steps elemets for all following / higher pages #}
+{% macro steps_higher(page) %}
+{% if page.higher %}
+<li class="step pl-4"><a href="{{ page.higher.permalink }}">{{ page.higher.title }}</a></li>
+{{ self::steps_higher(page=get_page(path=page.higher.relative_path)) }}
+{% endif %}
+{% endmacro %}
