Fixed width of the sidebar content.

--- a/templates/base.html
+++ b/templates/base.html
@@ -163,7 +163,7 @@
                     class="relative col-start-1 row-span-full row-start-1 {% if hide_sidebar %}hidden{% endif %} max-lg:hidden bg-base-200">
                     <div class="absolute inset-0">
                         <div
-                            class="sticky top-16 pt-4 bottom-0 left-0 h-full max-h-[calc(100dvh-(var(--spacing)*16))] w-2xs overflow-y-auto px-6">
+                            class="sticky top-16 pt-4 bottom-0 left-0 h-full max-h-[calc(100dvh-(var(--spacing)*16))] w-full overflow-y-auto px-6">
                             <div>
                                 <nav class="flex flex-col gap-8">
                                     {% block sidebar_content %}{% endblock %}
