Put "main" element again, as it is used in the stylesheet.

--- a/templates/base.html
+++ b/templates/base.html
@@ -174,7 +174,7 @@
                 </div>
 
                 <!-- main content -->
-                <div
+                <main
                     class="relative row-start-1 grid grid-cols-subgrid {% if hide_sidebar %}{% else %}lg:col-start-2{% endif %}">
                     <div
                         class="isolate grid max-w-2xl grid-cols-1 gap-10 mt-16 pt-4 md:pb-24 xl:max-w-4xl {% if hide_sidebar %}mx-auto{% else %}lg:ml-8{% endif %}">
@@ -189,7 +189,7 @@
                             {% endblock content %}
                         </div>
                     </div>
-                </div>
+                </main>
 
                 <!-- footer -->
                 <div class="row-start-3 {% if hide_sidebar %}{% else %}lg:col-start-2{% endif %}">
