Added workaround for DaisyUI bug regarding modal focus.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -215,4 +215,23 @@
     }
 }
 
+/* Workaround for bug in DaisyUI regarding modal focus, see https://github.com/saadeghi/daisyui/issues/3440 */
+@layer utilities {
+    .modal {
+        transition:
+            translate 0.3s ease-out,
+            background-color 0.3s ease-out,
+            opacity 0.1s ease-out;
+
+        @starting-style {
+
+            &.modal-open,
+            &[open],
+            &:target {
+                visibility: visible;
+            }
+        }
+    }
+}
+
 @import "./syntax-highlight.css"
