Adapted colors of the navbar submenues.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -115,6 +115,10 @@
         @apply list-decimal;
     }
 
+    .tracking-wide {
+        @apply list-none;
+    }
+
     blockquote {
         p {
             @apply py-0;
